tests/single_instruction_translation_validation/mcsema/register-variants/sqrtsd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:197:26: error: use of undefined value '@sqrt'
  %23 = tail call double @sqrt(double %6) #21
                         ^
0.02user 0.01system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 28152maxresident)k
0inputs+16outputs (0major+3270minor)pagefaults 0swaps
